asset helper, margin fix, collapsing button centered

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -218,11 +218,7 @@
 }
 
 .job-samples-page {
-  margin-right: 20vw;
-  margin-left: 20vw;
-  margin-top: 5vh;
-  margin-bottom: 8vh;
-
+  margin: 20px auto;
 }
 
 .job-sample {
@@ -237,10 +233,7 @@
 
 
 @media (max-width: 850px) {
-  .job-samples-page {
-    margin-right: 5vw;
-    margin-left: 5vw;
-  }
+
   .job-sample {
     padding: 1vw;
   }
@@ -273,19 +266,17 @@
 
 .collapsing-button {
   position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding-top: 50px;
+  padding-bottom: 5px;
   text-align: center;
   color: #0096a8;
   font-weight: 700;
   font-size: 18px;
-  width: 100%;
-  bottom: 0px;
-  border: none;
-  margin-left: auto;
-  margin-right: auto;
-  background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.92) 36%, rgb(255, 255, 255) 86%);
+  background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.92) 36%, white 86%);
   cursor: pointer;
-  padding-top: 50px;
-  padding-bottom: 5px;
 }
 
 
